# giraffe-ai

./: Cargo.toml  README.md  cliff.toml  deny.toml  test.rest
.cursor/memory/: plan-phase1.mdc  product-requirements.mdc  rust-design.mdc
.github/workflows/: build.yml  rust.yml
chat_server/: Cargo.toml  app.yml
chat_server/fixtures/: test.sql
chat_server/specs/: instructions.md  rust-design.md  rust-rules-review-plan.md
chat_server/src/: config.rs  error.rs  lib.rs  main.rs
chat_server/src/handlers/: auth.rs  chat.rs  message.rs  mod.rs  workspace.rs
chat_server/src/middleware/: auth.rs  chat.rs  mod.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
migrations/: 20250617100525_initial.sql  20250621134812_workspace.sql
notify_server/: Cargo.toml
notify_server/src/: main.rs
specs/: 01-design.md  02-design.md  product-requirements.md
sql/: init.sql
src/: lib.rs  main.rs  router.rs  state.rs
