[workspace]
resolver = "2"
members = ["chat_server", "notify_server"]

[workspace.dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["http2", "tracing", "multipart"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "any",
] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
