[package]
name = "notify-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { version = "0.10", features = ["typed-header"] }
features = "0.10.0"
futures = "0.3.31"
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio-rustls",
  "any",
] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
